[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>", "Darryl Mocek <dmocek@yahoo.com>"]
categories = ["command-line-utilities"]
description = "Utility for launching applications, focusing their windows, if they're already running, and cycling between open windows of the same app."
keywords = [
    "utility",
    "launcher",
    "x11",
    "window-management",
]
license = "GPL-3.0"
name = "raisen"
readme = "README.md"
homepage = "https://github.com/dmocek/raisen"
repository = "https://github.com/dmocek/raisen"
version = "0.3.4"
exclude = ["_config.yml"]
edition = "2021"

[badges.travis-ci]
repository = "dmocek/raisen"

[dependencies]
anyhow = "1"
daemonize= "0.5.0"
encoding = "0.2"
lazy_static = "1"
nom = "7"
regex = "1"
xcb = "1"

[profile.release]
lto = true
panic = "abort"
